objects/Animal_Boarding__c.object
<CustomObject>
    <fields>
        <fullName>Animal_Status__c</fullName>
        <label>Animal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Care</fullName>
                </value>
                <value>
                    <fullName>Returned to Owner</fullName>
                </value>
                <value>
                    <fullName>Surrendered</fullName>
                </value>
                <value>
                    <fullName>Claim of Ownership</fullName>
                </value>
                <value>
                    <fullName>No Further Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal__c</fullName>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Animal Boarding</relationshipLabel>
        <relationshipName>Animal_Boarding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Contract_End_date__c</fullName>
        <label>Current Contract End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Date_In_Care__c</fullName>
        <label>Final Date In Care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_In_Care__c</fullName>
        <label>First Date In Care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address__c</fullName>
        <label>Forwarding Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foster_Care_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Foster Care Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Animal Boarding</relationshipLabel>
        <relationshipName>Animal_Boarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Foster_Care_Phone_Number__c</fullName>
        <formula>Foster_Care_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foster Care Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Items_with_Animals__c</fullName>
        <label>Items with Animals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collar</fullName>
                </value>
                <value>
                    <fullName>Toys</fullName>
                </value>
                <value>
                    <fullName>Example 3</fullName>
                </value>
                <value>
                    <fullName>Example 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shelter_Location__c</fullName>
        <label>Shelter Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Mountains</fullName>
                </value>
                <value>
                    <fullName>Broken Hill</fullName>
                </value>
                <value>
                    <fullName>Cat Legacy</fullName>
                </value>
                <value>
                    <fullName>Central Coast</fullName>
                </value>
                <value>
                    <fullName>Coffs Harbour</fullName>
                </value>
                <value>
                    <fullName>Hunter</fullName>
                </value>
                <value>
                    <fullName>Illawarra</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Foster Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Animal Boarding</label>
    <nameField>
        <displayFormat>BOARD-{000000}</displayFormat>
        <label>Animal Boarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Boarding</pluralLabel>
    <recordTypes>
        <fullName>Foster_Care</fullName>
        <active>true</active>
        <label>Foster Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelter_Care</fullName>
        <active>true</active>
        <label>Shelter Care</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>